# cortexops

./: .gitignore  .semgrepignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  railway.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: eval.yml  security.yml
backend/: .env.example  Dockerfile  observability.py  production.py  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  observability.py  production.py  resilience.py  security.py  tiers.py
backend/app/api/: eval.py  metrics.py  stream.py  traces.py
backend/app/core/: auth.py
backend/app/models/: records.py  schemas.py
backend/app/routers/: admin.py  billing.py  evals.py  jwt_auth.py  keys.py  prompts.py  traces.py
backend/app/services/: alerting.py  metrics.py  traces.py
backend/app/worker/: celery_app.py  tasks.py
doc-site/: index.html
docs-site/: index.html
examples/e2e/: agent_e2e_test.py  e2e_test.py
examples/langgraph_payments/: agent.py  golden_v1.yaml  run_eval.py
frontend/: package.json
frontend-new/: .env.example  index.html
frontend-new/src/: Dashboard.jsx
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/src/: Dashboard.jsx
masev/: .gitignore  LICENSE  README.md  pyproject.toml  run_real_experiments.sh
masev/.github/workflows/: ci.yml
masev/examples/: langgraph_integration.py
masev/experiments/: generate_paper_tables.py  marble_adapter.py  run_all.py  run_all_benchmarks.py  run_payment_workflow.py  run_real_payment_workflow.py  update_paper_with_real_data.py
masev/masev/: __init__.py  evaluator.py  metrics.py  models.py
masev/results/: paper_tables.tex  payment_gpt4o_graph.json  payment_gpt4o_star.json  payment_gpt4o_tree.json
masev/results/full/: paper_tables.tex  payment_simulated_graph.json  payment_simulated_star.json  payment_simulated_tree.json
masev/results/full_benchmarks/: all_results.json  paper_tables_final.tex
masev/results/real/: payment_real_graph.json  payment_real_star.json  payment_real_tree.json
masev/tests/: test_metrics.py
sdk/: pyproject.toml  setup.py
sdk/cortexops/: LICENSE  README.md  __init__.py  auth.py  cli.py  client.py  judge.py  metrics.py  models.py  pyproject.toml  tracer.py
sdk/cortexops/cortexops/: cli.py  client.py  eval.py  metrics.py  models.py  tracer.py
sdk/cortexops/tests/: test_enhancements.py
sdk/tests/: conftest.py  test_cortexops.py  test_enhancements.py
website/: index.html  robots.txt  seo-head.html  sitemap.xml
