[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masev"
version = "0.1.0"
description = "Multi-Agent System Evaluation Framework -- Beyond Task Completion"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Ashish Verma", email = "contact@getcortexops.com"},
]
keywords = ["llm", "multi-agent", "evaluation", "metrics", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
full = ["openai>=1.0", "sentence-transformers>=2.2", "matplotlib>=3.7", "pandas>=2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/cortexops/masev"
Documentation = "https://github.com/cortexops/masev#readme"
Repository = "https://github.com/cortexops/masev"

[tool.setuptools.packages.find]
include = ["masev*"]
