[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortexops"
version = "0.1.0"
description = "Reliability infrastructure for AI agents — evaluation, observability, and regression testing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CortexOps Contributors" }]
keywords = ["llm", "agents", "evaluation", "observability", "langgraph", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
http = ["httpx>=0.27"]
all = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://cortexops.ai"
Repository = "https://github.com/ashishodu2023/cortexops"
Documentation = "https://docs.cortexops.ai"

[project.scripts]
cortexops = "cortexops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cortexops"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
